--- a/style.css
+++ b/style.css
@@ -1,25 +1,22 @@
 body {
+  position: relative;
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #e0d1e2;
 }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: inherit;
+  -webkit-filter: blur(5px);
+  filter: blur(5px);
+  z-index: -1;
 }
 
 .container {
@@ -28,6 +25,8 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   transition: box-shadow 0.3s ease;
+  position: relative;
+  z-index: 1;
 }
 
 .container:hover {
@@ -81,11 +80,27 @@ label {
 .modal-body img {
   border-radius: 10px;
   transition: filter 0.3s ease;
+  display: none;
 }
 
-.footer {
-  margin-top: 20px;
-  padding: 10px;
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
 }
